2007-07-06  Akim Demaille  <demaille@gostai.com>

	Make hash table simpler to use
	* hash.hh: Don't define libport::hash_map_type, just use
	using to import hash_map into libport.

2007-05-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add missing include.
	* network.h: Incude our own unistd.h.

2007-05-25  mefyl  <mefyl@lrde.epita.fr>

	Add missing include.
	* unistd.h: Include 'config.h' to detect <unistd.h>.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	select-const and symbols
	* select-const.hh, symbol.cc, symbol.hh, symbol.hxx: New.
	* fwd.hh, libport-sources.mk, libport.mk: Adjust.

2007-04-10  POTHIER Benoit  <pothier@gostai.com>

	Be more verbose in semaphores. Fix windows return values.
	* exception.hh: Add libport namespace.
	* exception.hxx: Same.
	* semaphore.hxx: Fix return values and add disnostic messages.

2007-04-10  POTHIER Benoit  <pothier@gostai.com>

	Fix windows compilation.
	* libport.mk: Add missing exception headers.
	* semaphore.hxx: Fix string use.

2007-04-10  POTHIER Benoit  <pothier@gostai.com>

	Be more verbose if semaphore calls are failing.
	* exception.hh: New.
	* exception.hxx: New.
	* semaphore.hxx: throw semaphore exceptions.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix MinGW portability...
	* network.h: EVEN on MinGW, socklen_t must be signed, so typedef it as
	an int.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	More fixes for MinGW portability.
	* network.h: Include stdint.h before using uint32_t.
	* windows.hh: Add a comment.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix portability issue on MinGW.
	* network.h: socklen_t and in_addr_t need to be typedef'ed even under
	MinGW.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix Windows portability.
	* network.h: socklen_t must really be int, not uint32_t or something
	similar.  Type correctness does not really matter on Windows.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>
